[package]
name = "limesurvey_postgres_fdw"
version = "0.5.6"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
wit-bindgen-rt = "0.26.0"
serde_json = "1.0"
base64 = "0.22.1"

[package.metadata.component]
package = "hubroplatform:limesurvey-postgres-fdw"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "./supabase-wrappers-wit" }
